force-app/main/default/objects/Vendor__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>