force-app/main/default/objects/Vendor__c/fields/Stored_By__c.field-meta.xml
<CustomField>
    <fullName>Stored_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Stored By</label>
    <referenceTo>Event_Manager__c</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>