force-app/main/default/objects/Vendor__c/fields/Vendor_Category__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Category__c</fullName>
    <label>Vendor Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Furniture</fullName>
                <default>true</default>
                <label>Furniture</label>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>AV Equipment</fullName>
            </value>
            <value>
                <fullName>Decor</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>